syntax = "proto3";
package pb;

option go_package = "./;pb";

import "google/protobuf/any.proto";

// IPC can send/receive three types of messages:
//   - Request
//       - Name - Request name is a unique identifier for the invoked method.
//       - Params - Parameters for the invoked method. Is of `[]Any` type.
//   - Response
//   - Error

message Message {
  MessageType type = 1;

  oneof payloads {
    Request req = 2;
    Response res = 3;
    Error err = 4;
  }
}

enum MessageType {
  REQUEST = 0;
  RESPONSE = 1;
  ERROR = 2;
}

message Request {
  string name = 1;
  repeated google.protobuf.Any params = 2;
}

message Response {
  string value = 1;
}

message Error {
  string err = 1;
}

// Params and results

message String {
  string content = 1;
}

message Script {
  bytes source = 1;
  repeated bytes arguments = 2;
}

// Locations

message StringLocation {
  string content = 1;
}

message IdentifierLocation {
  string content = 1;
}

message AddressLocation {
  bytes address = 1;
  string name = 2;
}

message TransactionLocation {
  bytes content = 1;
}
